# pyway

./: .gitignore  .snyk  .travis.yml  README.md  build.sh  coverage.sh  distribute.sh  main.py  migration.py  mypy.ini  pyproject.toml  pytest.ini  pyway.conf.example  pyway.py  requirements.txt  sample.conf  setup.cfg  setup.py  update_docs.sh
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/workflows/: pyway-build  pyway-build.yml  pyway-coverage.yml  pyway-flake8.yaml  pyway-mypy.yaml  pyway-test-osx.yml  pyway-test-pip.yml  pyway-test.yml
pyway/: __init__.py  checksum.py  configfile.py  errors.py  exceptions.py  helpers.py  import_.py  info.py  log.py  migrate.py  migration.py  settings.py  validate.py
pyway/dbms/: database.py  duckdb.py  mysql.py  postgres.py  sqlite.py
pyway/scripts/: main.py
pyway/sgbds/: database.py
resources/: V01_01__example_table.sql  V01_02__example_column.sql
tests/: test_checksum.py  test_checksum_mysqld.py  test_duckdb.py  test_helpers.py  test_import.py  test_import_mysqld.py  test_info_mysqld.py  test_integration.py  test_log.py  test_migrate.py  test_migrate_mysqld.py  test_migration.py  test_mysqld_checksum.py  test_mysqld_import.py  test_mysqld_info.py  test_mysqld_migrate.py  test_mysqld_validate.py  test_postgresql_checksum.py  test_postgresql_import.py  test_postgresql_info.py  test_postgresql_migrate.py  test_postgresql_validate.py  test_settings.py  test_sqlite_checksum.py  test_sqlite_import.py  test_sqlite_info.py  test_sqlite_migrate.py  test_sqlite_validate.py  test_validate.py  test_validate_mysqld.py  test_version.py
tests/data/: V01_01__test1.sql  pyway.conf  pyway_variable.conf
tests/data/schema/: V01_02__test2.sql  V01_03__test3.sql
tests/data/schema-postgres/: V01_01__test1.sql
tests/data/schema-sqlite/: V01_04__test4.sql
tests/data/schema_validate_diffchecksum/: V01_01__test1.sql
tests/data/schema_validate_diffchecksum_dos/: V01_01__test1.sql
tests/data/schema_validate_outofdate/: V01_01__test1.sql
tests/data/schema_validate_outofdate-sqlite/: V01_01__test1.sql
