[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyway"
version = "0.3.5"
authors = [{name = "Jason Camp", email = "me@jason.camp"}]
license = {text = "GPL"}
description = "Pyway is a database versioning and migration tool inspired by Flyway"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/jasondcamp/pyway"

[project.optional-dependencies]
widechars = ["wcwidth"]

