[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyway"
dynamic = ["version", "readme"]
authors = [{name = "Jason Camp", email = "me@jason.camp"}]
license = {text = "GPL"}
description = "Pyway is a database versioning and migration tool inspired by Flyway"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "tabulate == 0.9.0",
    "psycopg2-binary >= 2.9.5",
    "mysql-connector-python >= 8.0.32",
    "pyyaml >= 6.0.1",
    "strip_ansi >= 0.1.1"
]

requires-python = ">=3.7"

[project.optional-dependencies]
tests = [
  "pytest >= 7.2.1",
  "pytest-env == 0.8.1",
  "pytest-cov == 4.0.0",
  "coverage >= 7.2.1",
  "mysqld-integration-test >= 0.0.20"
]

[project.urls]
Homepage = "https://github.com/jasondcamp/pyway"

[project.scripts]
pyway = "pyway.scripts.main:cli"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "pyway.version.__version__"}
